@@ -1,3 +1,11 @@
+2001-07-02  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Inst/Defn.pm: Add IRIS2
+
+	* Group/IRIS2.pm: Add
+
+	* Frame/IRIS2.pm: Add
+
 2001-06-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Core.pm: Protect 'new ORAC::Recipe' with a try block
